[tool.poetry]
name = "gevent-practice"
version = "0.1.0"
description = ""
authors = ["soo <soo@ecdsa.io>"]

[tool.poetry.dependencies]
python = "^3.8"
gevent = "^20.5.2"
simplejson = "^3.17.0"
werkzeug = "^1.0.1"
pyzmq = "^19.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
